--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="hero">
       <div class="container">
         <h1 class="hidden-hero">Effective Solutions for Your Business</h1>
-        <button class="btn-hero" type="button">Order Service</button>
+        <button class="btn btn-hero" type="button">Order Service</button>
       </div>
     </section>
 
@@ -395,8 +395,82 @@
           </li>
         </ul>
       </div>
+
+      <form class="footer-form">
+        <label class="footer-form-label">
+          Subscribe
+          <input class="footer-form-input" type="text" name="subscribe" placeholder="E-mail">
+        </label>
+        <button type="submit" class="btn footer-form-btn">Subscribe
+          <svg class="footer-btn-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-frame"></use>
+          </svg>
+        </button>
+      </form>
     </div>
   </footer>
 </body>
+
+
+<div class="modal is-open">
+  <div class="modal-overlay">
+    <button type="button" class="btn btn-icon-close">
+      <svg class="modal-icon-btn" width="8" height="8">
+        <use href="./images/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+    <p class="modal-name">Leave your contacts and we will call you back</p>
+    <form class="modal-form">
+      <label class="modal-label" for="name">Name</label>
+
+      <div class="input-icon">
+        <input class="modal-input modal-input-name" type="text" name="name" id="name">
+        <svg class="modal-icon" width="18" height="24">
+          <use href="./images/icons.svg#icon-person"></use>
+        </svg>
+      </div>
+
+      <label class="modal-label" for="phone">Phone</label>
+
+      <div class="input-icon">
+        <input class="modal-input" type="tel" name="phone" id="phone">
+        <svg class="modal-icon" width="18" height="24">
+          <use href="./images/icons.svg#icon-phone"></use>
+        </svg>
+      </div>
+
+      <label class="modal-label" for="email">Email</label>
+
+      <div class="input-icon">
+        <input class="modal-input" type="email" name="email" id="email">
+        <svg class="modal-icon" width="18" height="24">
+          <use href="./images/icons.svg#icon-email"></use>
+        </svg>
+      </div>
+
+      <label class="modal-label">Comment
+        <textarea class="modal-textarea" name="comment" rows="6" placeholder="Text input"></textarea>
+      </label>
+
+      <div class="checkbox-group-wrapper">
+        <input class="modal-input-policy visually-hidden" type="checkbox" name="policy" id="policy">
+        <label class="modal-policy-label" for="policy">
+          <span class="checkbox-span">
+            <svg class="" width="10" height="8">
+              <use class="checkbox-icon" href="./images/icons.svg#icon-checkbox"></use>
+            </svg>
+          </span>
+          I accept the terms and conditions of the
+          <span class="privacy-policy-span">
+            Privacy Policy
+          </span>
+        </label>
+      </div>
+
+      <button class="btn modal-btn">Send</button>
+    </form>
+
+  </div>
+</div>
 
 </html>
