--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
 
 
 <div class="modal is-open">
+
   <div class="modal-overlay">
     <button type="button" class="btn btn-icon-close">
       <svg class="modal-icon-btn" width="8" height="8">
@@ -448,9 +449,9 @@
         </svg>
       </div>
 
-      <label class="modal-label">Comment
-        <textarea class="modal-textarea" name="comment" rows="6" placeholder="Text input"></textarea>
-      </label>
+      <label class="modal-label">Comment</label>
+      <textarea class="modal-textarea" name="comment" rows="6" placeholder="Text input"></textarea>
+
 
       <div class="checkbox-group-wrapper">
         <input class="modal-input-policy visually-hidden" type="checkbox" name="policy" id="policy">
@@ -469,8 +470,8 @@
 
       <button class="btn modal-btn">Send</button>
     </form>
-
   </div>
+
 </div>
 
 </html>
