fix is-open in index

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 </body>
 
 
-<div class="modal is-open">
+<div class="modal">
 
   <div class="modal-overlay">
     <button type="button" class="btn btn-icon-close">
