--- a/index.html
+++ b/index.html
@@ -396,17 +396,19 @@
         </ul>
       </div>
 
-      <form class="footer-form">
-        <label class="footer-form-label">
-          Subscribe
-          <input class="footer-form-input" type="text" name="subscribe" placeholder="E-mail">
-        </label>
-        <button type="submit" class="btn footer-form-btn">Subscribe
-          <svg class="footer-btn-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-frame"></use>
-          </svg>
-        </button>
-      </form>
+      <div class="form-cont">
+        <p class="form-name">Subscribe</p>
+        <form class="footer-form">
+          <label class="footer-form-label">
+            <input class="footer-form-input" type="email" name="subscribe" placeholder="E-mail">
+          </label>
+          <button type="submit" class="btn footer-form-btn">Subscribe
+            <svg class="footer-btn-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-frame"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
     </div>
   </footer>
 </body>
@@ -423,49 +425,56 @@
     <p class="modal-name">Leave your contacts and we will call you back</p>
     <form class="modal-form">
 
-      <label class="modal-label" for="name">Name</label>
+      <div class="form-list">
+        <label class="modal-label" for="user-name">Name</label>
 
-      <div class="input-icon">
-        <input class="modal-input modal-input-name" type="text" name="name" id="name">
-        <svg class="modal-icon" width="18" height="24">
-          <use href="./images/icons.svg#icon-person"></use>
-        </svg>
-      </div>
-
-      <label class="modal-label" for="phone">Phone</label>
-
-      <div class="input-icon">
-        <input class="modal-input" type="tel" name="phone" id="phone">
-        <svg class="modal-icon" width="18" height="24">
-          <use href="./images/icons.svg#icon-phone"></use>
-        </svg>
-      </div>
-
-      <label class="modal-label" for="email">Email</label>
-
-      <div class="input-icon">
-        <input class="modal-input" type="email" name="email" id="email">
-        <svg class="modal-icon" width="18" height="24">
-          <use href="./images/icons.svg#icon-email"></use>
-        </svg>
-      </div>
-
-      <label class="modal-label">Comment</label>
-      <textarea class="modal-textarea" name="comment" rows="6" placeholder="Text input"></textarea>
-
-      <input class="modal-input-policy visually-hidden" type="checkbox" name="policy" id="policy">
-      <label class="modal-policy-label" for="policy">
-        <span class="checkbox-span">
-          <svg class="" width="10" height="8">
-            <use class="checkbox-icon" href="./images/icons.svg#icon-checkbox"></use>
+        <div class="modal-input">
+          <input class="modal-input-box" type="text" name="name" id="user-name">
+          <svg class="modal-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-person"></use>
           </svg>
-        </span>
-        I accept the terms and conditions of the
-        <span class="privacy-policy-span">
-          Privacy Policy
-        </span>
-      </label>
+        </div>
+      </div>
 
+      <div class="form-list">
+        <label class="modal-label" for="user-phone">Phone</label>
+        <div class="modal-input">
+          <input class="modal-input-box" type="tel" name="phone" id="user-phone">
+          <svg class="modal-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-phone"></use>
+          </svg>
+        </div>
+      </div>
+
+      <div class="form-list">
+        <label class="modal-label" for="user-email">Email</label>
+        <div class="modal-input">
+          <input class="modal-input-box" type="email" name="email" id="user-email">
+          <svg class="modal-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-email"></use>
+          </svg>
+        </div>
+      </div>
+
+      <div class="form-list">
+        <label class="modal-label" for="user-comment">Comment</label>
+        <textarea class="modal-textarea" name="comment" placeholder="Text input" id="user-comment"></textarea>
+      </div>
+      <div class="form-list-policy">
+
+        <input class="modal-input-policy visually-hidden" type="checkbox" value="true" name="policy" id="user-privacy">
+        <label class="modal-policy-label" for="user-privacy">
+          <span class="checkbox-span">
+            <svg class="" width="10" height="8">
+              <use class="checkbox-icon" href="./images/icons.svg#icon-checkbox"></use>
+            </svg>
+          </span>
+          I accept the terms and conditions of the
+          <span class="privacy-policy-span">
+            Privacy Policy
+          </span>
+        </label>
+      </div>
 
       <button class="btn modal-btn">Send</button>
     </form>
