--- a/index.html
+++ b/index.html
@@ -411,75 +411,77 @@
       </div>
     </div>
   </footer>
+  <div class="modal">
+
+    <div class="modal-overlay">
+      <button type="button" class="btn btn-icon-close">
+        <svg class="modal-icon-btn" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <p class="modal-name">Leave your contacts and we will call you back</p>
+      <form class="modal-form">
+
+        <div class="form-list">
+          <label class="modal-label" for="user-name">Name</label>
+
+          <div class="modal-input">
+            <input class="modal-input-box" type="text" name="name" id="user-name">
+            <svg class="modal-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+        </div>
+
+        <div class="form-list">
+          <label class="modal-label" for="user-phone">Phone</label>
+          <div class="modal-input">
+            <input class="modal-input-box" type="tel" name="phone" id="user-phone">
+            <svg class="modal-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+        </div>
+
+        <div class="form-list">
+          <label class="modal-label" for="user-email">Email</label>
+          <div class="modal-input">
+            <input class="modal-input-box" type="email" name="email" id="user-email">
+            <svg class="modal-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+        </div>
+
+        <div class="form-list">
+          <label class="modal-label" for="user-comment">Comment</label>
+          <textarea class="modal-textarea" name="comment" placeholder="Text input" id="user-comment"></textarea>
+        </div>
+
+        <div class="form-list-policy">
+          <input class="modal-input-policy visually-hidden" type="checkbox" value="true" name="policy"
+            id="user-privacy">
+          <label class="modal-policy-label" for="user-privacy">
+            <span class="checkbox-span">
+              <svg class="" width="10" height="8">
+                <use class="checkbox-icon" href="./images/icons.svg#icon-checkbox"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the
+            <span class="privacy-policy-span">
+              Privacy Policy
+            </span>
+          </label>
+        </div>
+
+        <button class="btn modal-btn">Send</button>
+      </form>
+    </div>
+
+  </div>
+
 </body>
 
 
-<div class="modal">
-
-  <div class="modal-overlay">
-    <button type="button" class="btn btn-icon-close">
-      <svg class="modal-icon-btn" width="8" height="8">
-        <use href="./images/icons.svg#icon-close"></use>
-      </svg>
-    </button>
-    <p class="modal-name">Leave your contacts and we will call you back</p>
-    <form class="modal-form">
-
-      <div class="form-list">
-        <label class="modal-label" for="user-name">Name</label>
-
-        <div class="modal-input">
-          <input class="modal-input-box" type="text" name="name" id="user-name">
-          <svg class="modal-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-person"></use>
-          </svg>
-        </div>
-      </div>
-
-      <div class="form-list">
-        <label class="modal-label" for="user-phone">Phone</label>
-        <div class="modal-input">
-          <input class="modal-input-box" type="tel" name="phone" id="user-phone">
-          <svg class="modal-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-phone"></use>
-          </svg>
-        </div>
-      </div>
-
-      <div class="form-list">
-        <label class="modal-label" for="user-email">Email</label>
-        <div class="modal-input">
-          <input class="modal-input-box" type="email" name="email" id="user-email">
-          <svg class="modal-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-email"></use>
-          </svg>
-        </div>
-      </div>
-
-      <div class="form-list">
-        <label class="modal-label" for="user-comment">Comment</label>
-        <textarea class="modal-textarea" name="comment" placeholder="Text input" id="user-comment"></textarea>
-      </div>
-      <div class="form-list-policy">
-
-        <input class="modal-input-policy visually-hidden" type="checkbox" value="true" name="policy" id="user-privacy">
-        <label class="modal-policy-label" for="user-privacy">
-          <span class="checkbox-span">
-            <svg class="" width="10" height="8">
-              <use class="checkbox-icon" href="./images/icons.svg#icon-checkbox"></use>
-            </svg>
-          </span>
-          I accept the terms and conditions of the
-          <span class="privacy-policy-span">
-            Privacy Policy
-          </span>
-        </label>
-      </div>
-
-      <button class="btn modal-btn">Send</button>
-    </form>
-  </div>
-
-</div>
 
 </html>
