--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
           </div>
         </div>
 
-        <div class="form-list">
+        <div class="form-list form-list-policy">
           <label class="modal-label" for="user-comment">Comment</label>
           <textarea class="modal-textarea" name="user-comment" placeholder="Text input" id="user-comment"></textarea>
         </div>
@@ -469,9 +469,9 @@
               </svg>
             </span>
             I accept the terms and conditions of the
-            <span class="privacy-policy-span">
-              <a class="policy-link" href="#">Privacy Policy</a>
-            </span>
+
+            <a class="policy-link" href="#">Privacy Policy</a>
+
           </label>
         </div>
 
