--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
           </div>
         </div>
 
-        <div class="form-list form-list-policy">
+        <div class="form-list form-list-textarea">
           <label class="modal-label" for="user-comment">Comment</label>
           <textarea class="modal-textarea" name="user-comment" placeholder="Text input" id="user-comment"></textarea>
         </div>
